Created header label

--- a/app/widgets/ds.slideMenu/views/widget.xml
+++ b/app/widgets/ds.slideMenu/views/widget.xml
@@ -10,6 +10,7 @@
 			<View id="shadowview">
 				<View id="navview">
 					<Button id="leftButton" />
+					<Label id='navheader' />
 					<Button id="rightButton" />
 				</View>
 				<View id="contentview" />
